# ros2_ws_web_claude

ros2_ws/: CLAUDE.md  README.md  README2.md  fix_ament_hooks.py  fix_ament_hooks.sh  resultados.md
ros2_ws/analysis_exp_curva_90/: summary.json
ros2_ws/analysis_exp_curva_90/trajectories_csv/: trajectory_baseline.csv  trajectory_replay_01.csv  trajectory_replay_02.csv
ros2_ws/analysis_exp_linha_2m/: summary.json
ros2_ws/analysis_exp_linha_2m/trajectories_csv/: trajectory_baseline.csv  trajectory_replay_01.csv  trajectory_replay_02.csv
ros2_ws/analysis_exp_zigzag/: summary.json
ros2_ws/analysis_exp_zigzag/trajectories_csv/: trajectory_baseline.csv  trajectory_replay_01.csv
ros2_ws/fleet_ui/: README.md  tb4_cmd_vel_relay.py  tb4_tf_publisher.py  turtlebot3_house.launch.py  turtlebot4_sim.launch.py
ros2_ws/fleet_ui/backend/: main.py
ros2_ws/fleet_ui/config/: nav2_minimal_override.yaml
ros2_ws/fleet_ui/frontend/: index.html  package.json
ros2_ws/fleet_ui/frontend/src/: App.jsx  index.css
ros2_ws/models/turtlebot3_waffle/: model.sdf
ros2_ws/scripts/: analyze_runs.py  diagnose_nav_fleet.sh  experiment_repeatability.py
ros2_ws/src/fleet_bringup/: package.xml  setup.py
ros2_ws/src/fleet_bringup/config/: multi_robot_sim.yaml
ros2_ws/src/fleet_bringup/fleet_bringup/: tf_relay.py
ros2_ws/src/fleet_bringup/launch/: fleet_nav_launch.launch.py  multi_robot_sim.launch.py
ros2_ws/src/fleet_bringup/params/: tb1_bridge.yaml  tb1_nav2.yaml  tb2_bridge.yaml  tb2_nav2.yaml
ros2_ws/src/fleet_data_collector/: setup.py
ros2_ws/src/fleet_data_collector/fleet_data_collector/: main.py
ros2_ws/src/fleet_orchestrator/: package.xml  setup.py
ros2_ws/src/fleet_orchestrator/config/: roles.yaml
ros2_ws/src/fleet_orchestrator/fleet_orchestrator/: main.py
ros2_ws/src/fleet_orchestrator/resource/hook/: ament_prefix_path.sh  package.dsv
(+1 files in other folders)
