<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fleet_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for multi-robot fleet simulation (TurtleBot3 + Nav2 + SLAM).</description>
  <maintainer email="wanderley.eduardo@gmail.com">Eduardo</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>fleet_orchestrator</exec_depend>
  <exec_depend>fleet_data_collector</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>opennav_docking</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
