<?xml version="1.0"?>
<package format="3">
  <name>fleet_orchestrator</name>
  <version>0.1.0</version>
  <description>Orquestrador de frota: record/save/play de rotas e envio de goals Nav2 por robot_id (API pronta para UI).</description>
  <maintainer email="eduardo@example.com">Eduardo</maintainer>
  <license>MIT</license>

  <build_type>ament_python</build_type>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>fleet_msgs</depend>
  <exec_depend>ament_index_python</exec_depend>

  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
